--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -916,7 +916,7 @@ let session = try await account.get()</code></pre>
 
 <h3><a href="/docs/authentication#recovery" id="recovery">Password Recovery</a></h3>
 <p>
-    If a user forgets their password, they can initiate a password recovery flow to recover their password. The <a href="/docs/client/account#accountCreateRecovery">Create Password Recovery</a> endpont sends the user an email with a temporary secret key for password reset. When the user clicks the confirmation link he is redirected back to your app password reset URL with the secret key and email address values attached to the URL query string. 
+    If a user forgets their password, they can initiate a password recovery flow to recover their password. The <a href="/docs/client/account#accountCreateRecovery">Create Password Recovery</a> endpoint sends the user an email with a temporary secret key for password reset. When the user clicks the confirmation link, they are redirected back to the password reset URL with the secret key and email address values attached to the URL as query strings. 
 </p>
 
 <p>
@@ -1013,7 +1013,7 @@ let token = try await account.createRecovery(
 </ul>
 
 <p>
-After receiving a email with the secret attached to a redirect link, submit a request to the <a href="/docs/client/account#accountUpdateRecovery">Create Password Recovery (confirmation)</a> endpoint to complete the process.  The verification link sent to the user's email address is valid for 1 hour.
+After receiving a email with the secret attached to the redirect link, submit a request to the <a href="/docs/client/account#accountUpdateRecovery">Create Password Recovery (confirmation)</a> endpoint to complete the recovery flow. The verification link sent to the user's email address is valid for 1 hour.
 </p>
 
 <ul class="phases clear" data-ui-phases>
@@ -1115,9 +1115,9 @@ let token = try await account.updateRecovery(
 
 
 <h2><a href="/docs/authentication#jwt" id="jwt">JWT Authentication</a></h2>
-<p>If you're building server applications using Appwrite's Server SDKs, you can use JWTs for authentication between your client and server applications. When your client application generate a JWT and passes it to your server application, it can be used by your server application to act onbehalf of the authenticated user.</p>
+<p>If you're building server applications using Appwrite's Server SDKs, you can use JWTs for authentication between your client and server applications.</p>
 
-<p>You need to create a session using the Client SDKs <b>before</b> generating a JWT. The JWT will be a stateless proof of claim for the identity of the authenticated user and expires after 15 minutes.</p>
+<p>You need to create a session using the Client SDKs <b>before</b> generating a JWT. The JWT will be a stateless proof of claim for the identity of the authenticated user and can be used by client SDKs to act on behalf of a user. Each JWT expires after 15 minutes.</p>
 
 <p>You can generate a JWT like this:</p>
 
@@ -1207,7 +1207,7 @@ let jwt = try await account.createJWT()</code></pre>
     </li>
 </ul>
 
-<p>Your server application can use the JWT to act on behalf of the user by creating a <code>Client</code> instance with the JWt.</p>
+<p>Your server application can use the JWT to act on behalf of the user by creating a <code>Client</code> instance with the JWT for each request it receives with a JWT.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -1404,8 +1404,8 @@ let client = Client()
 
 
 <h2><a href="/docs/authentication#preferences" id="preferences">User Preferences</a></h2>
-<p>You can store user preferences on a user's account using Appwrite's <a href="/docs/client/account#accountUpdatePrefs">Update Preferences</a> endpoint. You can store user preferences such as theme selected, notification settings, or language selected so they can be synced across multiple devices.</p>
-<p>Preferences are stored as a key-value JSON object. The maximum allowed prefs size is 64kB and throws error if exceeded.</p> 
+<p>You can store user preferences on a user's account using Appwrite's <a href="/docs/client/account#accountUpdatePrefs">Update Preferences</a> endpoint. You can store user preferences such as theme, notification settings, or preferred language so they can be synced across multiple devices.</p>
+<p>Preferences are stored as a key-value JSON object. The maximum allowed prefs size is 64kB and throws an error if exceeded.</p> 
 <ul class="phases clear" data-ui-phases>
 <li>
         <h3>Web</h3>
