--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -504,7 +504,7 @@ static RuntimeResponse &main(const RuntimeRequest &req, RuntimeResponse &res) {
 <p><a href="/docs/server/functions#functionsCreateDeployment" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> You can also create new code deployments using the Appwrite server API</a></p>
 
 <h3>Manual Deployment</h3>
-<p>You can also upload your functions to be deployed using the Appwrite console. The example below shows a typical Node.JS function, but the same idea applies to any other language.</p>
+<p>You can also upload your functions to be deployed using the Appwrite console. The example below shows a simple Node.JS function, but the same idea applies to any other language.</p>
 
 <div class="ide margin-bottom">
     <pre class="line-numbers"><code class="prism" data-prism>.
