--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -614,7 +614,7 @@ let user = try await account.createMagicURLSession(
 </ul>
 
 <p>
-    After receiving your sercret from an email, you can create a new Magic URL session like this:
+    After receiving your secret from an email, you can create a new Magic URL session like this:
 </p>
 
 
