--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -505,7 +505,7 @@ mutation {
 </p>
 
 
-<h3><a href="/docs/authentication#magic" id="magic">Magic URL</a></h3>
+<h3><a href="/docs/authentication#magic-url" id="magic-url">Magic URL</a></h3>
 <p>
     Magic URL authentication allows a user to sign in without a password. Magic URL authentication sends the user an email with a secret key for creating a new session. If the provided user ID has not be registered, a new user will be created. 
 </p>
