--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -630,7 +630,7 @@ const client = new Client()
 
 const account = new Account(client);
 
-const promise = account.updateMagicURLSession('[USER_ID]', [SECRET]);
+const promise = account.updateMagicURLSession('[USER_ID]', '[SECRET]');
 
 promise.then(function (response) {
     console.log(response);
