--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -966,7 +966,7 @@ final user = account.createRecovery(
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
-val client = Client()
+val client = Client(context)
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
     .setProject("5df5acd0d48c2")                // Your project ID
 
