--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1220,7 +1220,7 @@ const client = new sdk.Client();
 client
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
     .setProject('5df5acd0d48c2') // Your project ID
-    .setJWT('eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ...') // Your secret JSON Web Token
+    .setJWT('eyJJ9.eyJ...') // Your secret JSON Web Token
 ;</code></pre>
         </div>
     </li>
