--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1258,7 +1258,7 @@ client = Client()
     <li>
         <h3>Ruby</h3>
         <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby SDK">
-            <pre class="line-numbers"><code class="prism language-ruby" data-prism>require 'Appwrite'
+            <pre class="line-numbers"><code class="prism language-ruby" data-prism>require 'appwrite'
 
 include Appwrite
 
