--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1238,7 +1238,7 @@ client = Client.new
         <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno SDK">
             <pre class="line-numbers"><code class="prism language-typescript" data-prism>import { Client } from "https://deno.land/x/appwrite/mod.ts";
 
-let client = new sdk.Client();
+let client = new Client();
 
 client
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')             // Your API Endpoint
