--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1392,7 +1392,7 @@ final client = Client()
 final account = Account(client);
 
 final user = await account.updatePrefs(
-    pref: {
+    prefs: {
         "darkTheme": true,
         "language": "en",
     }
